Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-10424

Assertion `ticket == __null' failed in MDL_request::set_type

    XMLWordPrintable

Details

    • 5.5.51 & 10.2.2

    Description

      Stack trace from 10.1 commit a52d3aa831

      mysqld: /data/src/10.1/sql/mdl.h:475: void MDL_request::set_type(enum_mdl_type): Assertion `ticket == __null' failed.
      160724 14:38:41 [ERROR] mysqld got signal 6 ;
       
      #6  0x00007ff9d8f9a266 in __assert_fail_base (fmt=0x7ff9d90d3238 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x7ff9dc0a4fca "ticket == __null", file=file@entry=0x7ff9dc0a4fb1 "/data/src/10.1/sql/mdl.h", line=line@entry=475, function=function@entry=0x7ff9dc0a7c00 <MDL_request::set_type(enum_mdl_type)::__PRETTY_FUNCTION__> "void MDL_request::set_type(enum_mdl_type)") at assert.c:92
      #7  0x00007ff9d8f9a312 in __GI___assert_fail (assertion=0x7ff9dc0a4fca "ticket == __null", file=0x7ff9dc0a4fb1 "/data/src/10.1/sql/mdl.h", line=475, function=0x7ff9dc0a7c00 <MDL_request::set_type(enum_mdl_type)::__PRETTY_FUNCTION__> "void MDL_request::set_type(enum_mdl_type)") at assert.c:101
      #8  0x00007ff9db747529 in MDL_request::set_type (this=0x7ff9cfc56020, type_arg=MDL_SHARED_READ) at /data/src/10.1/sql/mdl.h:475
      #9  0x00007ff9db8e1014 in mysql_admin_table(THD *, TABLE_LIST *, HA_CHECK_OPT *, const char *, thr_lock_type, bool, bool, uint, int (*)(THD *, TABLE_LIST *, HA_CHECK_OPT *), struct {...}, int (*)(THD *, TABLE_LIST *, HA_CHECK_OPT *)) (thd=0x7ff9d1ffa070, tables=0x7ff9cfc555c8, check_opt=0x7ff9cfc54f70, operator_name=0x7ff9dc0e73f7 "analyze", lock_type=TL_READ_NO_INSERT, open_for_modify=true, repair_table_use_frm=false, extra_open_options=0, prepare_func=0x0, operator_func=(int (handler::*)(handler * const, THD *, HA_CHECK_OPT *)) 0x7ff9db9dfe28 <handler::ha_analyze(THD*, st_ha_check_opt*)>, view_operator_func=0x0) at /data/src/10.1/sql/sql_admin.cc:387
      #10 0x00007ff9db8e3fbf in Sql_cmd_analyze_table::execute (this=0x7ff9cfc561f0, thd=0x7ff9d1ffa070) at /data/src/10.1/sql/sql_admin.cc:1238
      #11 0x00007ff9db7a97ad in mysql_execute_command (thd=0x7ff9d1ffa070) at /data/src/10.1/sql/sql_parse.cc:5669
      #12 0x00007ff9db7c7ec6 in Prepared_statement::execute (this=0x7ff9cff80470, expanded_query=0x7ff9dc6f6a10, open_cursor=false) at /data/src/10.1/sql/sql_prepare.cc:4269
      #13 0x00007ff9db7c6d37 in Prepared_statement::execute_loop (this=0x7ff9cff80470, expanded_query=0x7ff9dc6f6a10, open_cursor=false, packet=0x0, packet_end=0x0) at /data/src/10.1/sql/sql_prepare.cc:3901
      #14 0x00007ff9db7c4dcf in mysql_sql_stmt_execute (thd=0x7ff9d1ffa070) at /data/src/10.1/sql/sql_prepare.cc:3033
      #15 0x00007ff9db7a02c0 in mysql_execute_command (thd=0x7ff9d1ffa070) at /data/src/10.1/sql/sql_parse.cc:2971
      #16 0x00007ff9db7adaba in mysql_parse (thd=0x7ff9d1ffa070, rawbuf=0x7ff9cfce2088 "EXECUTE stmt", length=12, parser_state=0x7ff9dc6f75e0) at /data/src/10.1/sql/sql_parse.cc:7314
      #17 0x00007ff9db79c4e4 in dispatch_command (command=COM_QUERY, thd=0x7ff9d1ffa070, packet=0x7ff9d393e071 "", packet_length=12) at /data/src/10.1/sql/sql_parse.cc:1486
      #18 0x00007ff9db79b21b in do_command (thd=0x7ff9d1ffa070) at /data/src/10.1/sql/sql_parse.cc:1107
      #19 0x00007ff9db8d0e45 in do_handle_one_connection (thd_arg=0x7ff9d1ffa070) at /data/src/10.1/sql/sql_connect.cc:1350
      #20 0x00007ff9db8d0ba9 in handle_one_connection (arg=0x7ff9d1ffa070) at /data/src/10.1/sql/sql_connect.cc:1262
      #21 0x00007ff9dbbb20fa in pfs_spawn_thread (arg=0x7ff9d8427ef0) at /data/src/10.1/storage/perfschema/pfs.cc:1860
      #22 0x00007ff9dae9c0a4 in start_thread (arg=0x7ff9dc6f8b00) at pthread_create.c:309
      #23 0x00007ff9d905487d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111
      

      CREATE TABLE t1 (f1 INT) ENGINE=MyISAM;
      CREATE TABLE tmerge (f1 INT) ENGINE=MERGE UNION=(t1);
      PREPARE stmt FROM "ANALYZE TABLE tmerge, t1";
      EXECUTE stmt;
      EXECUTE stmt;
      

      Please feel free to change 'Fix version/s' if it's unsafe to fix it in earlier versions.

      Attachments

        Activity

          People

            svoj Sergey Vojtovich
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.25h
                0.25h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.